--- a/csaw_function_CLEAN_ET.Rmd
+++ b/csaw_function_CLEAN_ET.Rmd
@@ -2508,16 +2508,13 @@ out$gg
 
 ###Figure 4
 #genes actually enirched for Kac
-Kac_enriched <- Kac_Results_K27promTSSext_vInput %>%
-  filter(if_any(all_of(c(6, 9, 12, 18, 21, 24, 27)), ~ coalesce(.x > 0, FALSE)))
-Kacscatter = subset(Kac_Results_K27promTSSext_vWT, Kac_Results_K27promTSSext_vWT$gene_id %in% Kac_enriched$gene_id)
 
 #Kac vs K27 cac-2
 out <- chip_scatter_flex(
   mode          = "chip_vs_chip",
   chip_df_x     = H3K27me3_CS_Results_K27promTSS_vWT,
   strain_x      = "cac2",
-  chip_df_y     = Kacscatter,
+  chip_df_y     = Kac_Results_K27promTSSext_vWT,
   strain_y      = "cac2",
   chip_x_label  = "H3K27me3",
   chip_y_label  = "Kac",
@@ -2536,7 +2533,7 @@ out$gg
 #Kac vs RNA cac-2
 out <- chip_scatter_flex(
   mode        = "chip_vs_rna",
-  chip_df_x   = Kacscatter,   
+  chip_df_x   = Kac_Results_K27promTSSext_vWT,   
   strain_x    = "cac2",
   rna_df      = cac2RNA,                          # RNA df
   up_thresh      =  1,
@@ -2603,7 +2600,7 @@ out <- chip_scatter_flex(
   mode          = "chip_vs_chip",
   chip_df_x     = K36scatter,
   strain_x      = "cac1",
-  chip_df_y     = Kacscatter,
+  chip_df_y     = Kac_Results_K27promTSSext_vWT,
   strain_y      = "cac1",
   chip_x_label  = "H3K36me3",
   chip_y_label  = "Kac",
@@ -2624,7 +2621,7 @@ out <- chip_scatter_flex(
   mode          = "chip_vs_chip",
   chip_df_x     = K36scatter,
   strain_x      = "cac2",
-  chip_df_y     = Kacscatter,
+  chip_df_y     = Kac_Results_K27promTSSext_vWT,
   strain_y      = "cac2",
   chip_x_label  = "H3K36me3",
   chip_y_label  = "Kac",
@@ -2644,7 +2641,7 @@ out <- chip_scatter_flex(
   mode          = "chip_vs_chip",
   chip_df_x     = K36scatter,
   strain_x      = "set7",
-  chip_df_y     = Kacscatter,
+  chip_df_y     = Kac_Results_K27promTSSext_vWT,
   strain_y      = "set7",
   chip_x_label  = "H3K36me3",
   chip_y_label  = "Kac",
@@ -2663,7 +2660,7 @@ out$gg
 #other Kac vs RNA
 out <- chip_scatter_flex(
   mode        = "chip_vs_rna",
-  chip_df_x   = Kacscatter,   
+  chip_df_x   = Kac_Results_K27promTSSext_vWT,   
   strain_x    = "set7",
   rna_df      = set7RNA,                          # RNA df
   up_thresh      =  1,
@@ -2678,7 +2675,7 @@ out$gg
 #
 out <- chip_scatter_flex(
   mode        = "chip_vs_rna",
-  chip_df_x   = Kacscatter,   
+  chip_df_x   = Kac_Results_K27promTSSext_vWT,   
   strain_x    = "cac1",
   rna_df      = cac1RNA,                          # RNA df
   up_thresh      =  1,
@@ -2725,7 +2722,7 @@ out <- chip_scatter_flex(
   mode          = "chip_vs_chip",
   chip_df_x     = H3K27me3_CS_Results_K27promTSS_vWT,
   strain_x      = "cac1",
-  chip_df_y     = Kacscatter,
+  chip_df_y     = Kac_Results_K27promTSSext_vWT,
   strain_y      = "cac1",
   chip_x_label  = "H3K27me3",
   chip_y_label  = "Kac",
@@ -2740,6 +2737,60 @@ out <- chip_scatter_flex(
   width_in      = 12, height_in = 9, dpi = 600
 )
 out$gg
+
+#Figure 6 supplement (Double Mutant)
+
+#K36, Kac vs RNA
+out <- chip_scatter_flex(
+  mode        = "chip_vs_rna",
+  chip_df_x   = K36scatter,   
+  strain_x    = "cac1_suz12",
+  rna_df      = cac1suz12RNA,                          # RNA df
+  up_thresh      =  1,
+  down_thresh    = -1,
+  chip_x_label = "K36",                      # label in axes/title
+  out_dir     = "scatter_outputs",
+  file_prefix = "K36_vs_RNA_cac1_suz12_K27_promTSS",
+  width_in    = 12, height_in = 9, dpi = 600
+)
+out$gg
+
+out <- chip_scatter_flex(
+  mode        = "chip_vs_rna",
+  chip_df_x   = Kac_Results_K27promTSSext_vWT,   
+  strain_x    = "cac1_suz12",
+  rna_df      = cac1suz12RNA,                          # RNA df
+  up_thresh      =  1,
+  down_thresh    = -1,
+  chip_x_label = "K36",                      # label in axes/title
+  out_dir     = "scatter_outputs",
+  file_prefix = "Kac_vs_RNA_cac1_suz12_K27_promTSS",
+  width_in    = 12, height_in = 9, dpi = 600
+)
+out$gg
+
+#K36 vs Kac
+out <- chip_scatter_flex(
+  mode          = "chip_vs_chip",
+  chip_df_x     = K36scatter,
+  strain_x      = "cac1_suz12",
+  chip_df_y     = Kac_Results_K27promTSSext_vWT,
+  strain_y      = "cac1_suz12",
+  chip_x_label  = "H3K36me3",
+  chip_y_label  = "Kac",
+  chip_x_cutoff   = 0.75,
+  chip_y_cutoff   = 0.585,
+  chip_cut_use     = c("x_neg","y_pos"),
+  chip_cut_colors  = c(both = "red", x_only = "#a65628", y_only = "#cab2d6", neither = "gray70"),
+  show_cutoff_guides = TRUE,
+  guide_sides        = NULL,   # NULL => uses chip_cut_use
+  out_dir       = "scatter_outputs",
+  file_prefix   = "H3K36me3_vs_Kac_cac1_suz12_promTSS",
+  width_in      = 12, height_in = 9, dpi = 600
+)
+out$gg
+
+
 
 #View what your plotting
 View(out$data)  
@@ -3054,8 +3105,6 @@ H3K36me3_no_ash1 = subset(K36_enriched_genes, K36_enriched_genes$logFC_ash1 < -0
 H3K36me3_no_ash1_nonK27 = subset(H3K36me3_no_ash1, ! H3K36me3_no_ash1$gene_id %in% regions$K27genes$gene_id)
 
 #ash-1 methylated, non-K27, lost in CAF (going over TSS)
-H3K36me3_no_ash1_no_CAF = subset(H3K36me3_Results_K27promTSS_vWT, H3K36me3_Results_$gene_id %in% H3K36me3_no_ash1_nonK27$gene_id & (H3K36me3_Results_K27promTSS_vWT$logFC_cac1 < -0.75 | H3K36me3_Results_K27promTSS_vWT$logFC_cac2 < -0.75 ))
-
 
 #Not ash-1 methylated
 H3K36me3_set2_meth <- subset(K36_enriched_genes, ! K36_enriched_genes$gene_id %in% H3K36me3_no_ash1$gene_id & ! K36_enriched_genes$gene_id %in% regions$K27genes$gene_id)
@@ -3090,7 +3139,7 @@ K27lostK36enrichedvWT = subset(H3K36me3_Results_K27promTSS_vWT, H3K36me3_Results
 K36lost = subset(K27lostK36enrichedvWT, K27lostK36enrichedvWT$logFC_cac1 < -0.75 | K27lostK36enrichedvWT$logFC_cac2 < -0.75)
 K36lost_set7 = subset(K27lostK36enrichedvWT, K27lostK36enrichedvWT$logFC_set7 < -0.75)
 
-K36lost_CAF_ALL = subset(H3K36me3_Results_allgenes_vWT, H3K36me3_Results_allgenes_vWT$logFC_cac1 < -0.75 | H3K36me3_Results_allgenes_vWT$logFC_cac2 < -0.75)
+#K36lost_CAF_ALL = subset(H3K36me3_Results_allgenes_vWT, H3K36me3_Results_allgenes_vWT$logFC_cac1 < -0.75 | H3K36me3_Results_allgenes_vWT$logFC_cac2 < -0.75)
 K36lost_CAF_nonK27 = subset(K36lost_CAF_ALL, ! K36lost_CAF_ALL$gene_id %in% K36lost$gene_id)
 
 #K36lost = subset(K36lost, K36lost$FDR_cac1 < 0.05 | K36lost$FDR_cac2 < 0.05)
@@ -3118,6 +3167,20 @@ K27_K36retain = subset(regions$K27genes, ! regions$K27genes$gene_id %in% K36lost
 write.table(K27lost_only, file = "CAF1_K27_lost_only.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 write.table(K27_K36retain, file = "CAF1_K36_K27_retain.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 
+#########################################
+###Figure 3 supplement
+##K36 clustering at non-K27 ash-1 genes
+ash1_depvWT = subset(H3K36me3_Results_allgenes_promTSSext_vWT, H3K36me3_Results_allgenes_promTSSext_vWT$gene_id %in% H3K36me3_no_ash1_nonK27$gene_id)
+
+ash1_dep_CAF_lost = subset(ash1_depvWT, ash1_depvWT$logFC_cac1 < -0.75 | ash1_depvWT$logFC_cac2 < -0.75)
+ash1_dep_CAF_Retain = subset(ash1_depvWT, ! ash1_depvWT$gene_id %in% ash1_dep_CAF_lost$gene_id )
+
+ash1_dep_CAF_lost_bed = subset(regions$allgenes, regions$allgenes$gene_id %in% ash1_dep_CAF_lost$gene_id)
+ash1_dep_CAF_Retain_bed = subset(regions$allgenes, regions$allgenes$gene_id %in% ash1_dep_CAF_Retain$gene_id)
+
+write.table(ash1_dep_CAF_lost_bed, file = "ash1_dep_CAF_lost.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
+write.table(ash1_dep_CAF_Retain_bed, file = "ash1_dep_CAF_Retain.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
+
 #################
 
 ####
@@ -3144,25 +3207,31 @@ K4_enrichedvWT = subset(H3K4me2_Results_K27genes_vWT, H3K4me2_Results_K27genes_v
 
 #########################
 #Now subsetting for changes
+
+###Figure 4
+##Kac
 Kac_prom_gain_CAF = subset(Kac_enrichedvWT, Kac_enrichedvWT$logFC_cac1 > 0.585 | Kac_enrichedvWT$logFC_cac2 > 0.585)
-Kac_prom_gain_cac2 = subset(Kac_enrichedvWT, Kac_enrichedvWT$logFC_cac2 > 0.585)
 Kac_prom_gain_set7 = subset(Kac_enrichedvWT, Kac_enrichedvWT$logFC_set7 > 0.585)
+Kac_prom_NO_gain_set7 = subset(Kac_enrichedvWT, ! Kac_enrichedvWT$gene_id %in% Kac_prom_gain_set7$gene_id)
 Kac_prom_gain_set7_noCAF = subset(Kac_enrichedvWT, Kac_enrichedvWT$logFC_set7 > 0.585 & ! Kac_enrichedvWT$gene_id %in% Kac_prom_gain_CAF$gene_id)
 Kac_enriched_nochange = subset(Kac_enrichedvWT, ! Kac_enrichedvWT$gene_id %in% Kac_prom_gain_CAF$gene_id & ! Kac_enrichedvWT$gene_id %in% Kac_prom_gain_set7$gene_id)
+Kac_prom_gain_cac2 = subset(Kac_enrichedvWT, Kac_enrichedvWT$logFC_cac2 > 0.585)
 
 Kac_Gain_CAF = subset(regions$K27genes, regions$K27genes$gene_id %in% Kac_prom_gain_CAF$gene_id)
-Kac_Gain_cac2 = subset(regions$K27genes, regions$K27genes$gene_id %in% Kac_prom_gain_cac2$gene_id)
 Kac_Gain_set7 = subset(regions$K27genes, regions$K27genes$gene_id %in% Kac_prom_gain_set7$gene_id)
+Kac_NO_Gain_set7 = subset(regions$K27genes, regions$K27genes$gene_id %in% Kac_prom_NO_gain_set7$gene_id)
 Kac_Gain_set7_noCAF = subset(regions$K27genes, regions$K27genes$gene_id %in% Kac_prom_gain_set7_noCAF$gene_id)
 Kac_no_change = subset(regions$K27genes, regions$K27genes$gene_id %in% Kac_enriched_nochange$gene_id)
+Kac_Gain_cac2 = subset(regions$K27genes, regions$K27genes$gene_id %in% Kac_prom_gain_cac2$gene_id)
 
 write.table(Kac_Gain_CAF, file = "Kac_Gain_CAF.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
-write.table(Kac_Gain_cac2, file = "Kac_Gain_cac2.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 write.table(Kac_Gain_set7, file = "Kac_Gain_set7.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
+write.table(Kac_NO_Gain_set7, file = "Kac_NO_Gain_set7.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 write.table(Kac_Gain_set7_noCAF, file = "Kac_Gain_set7_noCAF.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 write.table(Kac_no_change, file = "Kac_no_change.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
+write.table(Kac_Gain_cac2, file = "Kac_Gain_cac2.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 
-###
+##K4
 K4_genes_gain_CAF = subset(K4_enrichedvWT, K4_enrichedvWT$logFC_cac1 > 0.75 | K4_enrichedvWT$logFC_cac2 > 0.75)
 K4_genes_gain_set7 = subset(K4_enrichedvWT, K4_enrichedvWT$logFC_set7 > 0.75)
 K4_genes_gain_set7_noCAF = subset(K4_enrichedvWT, K4_enrichedvWT$logFC_set7 > 0.75 & ! K4_enrichedvWT$gene_id %in% K4_genes_gain_CAF$gene_id)
@@ -3181,18 +3250,29 @@ write.table(K4_Gain_set7_noCAF, file = "K4_Gain_set7_noCAF.bed", sep = "\t", quo
 write.table(K4_Gain_cac2, file = "K4_Gain_cac2.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 write.table(K4_no_change, file = "K4_no_change.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 
-#Figure 6
+###Figure 6
 #Kac
 Kac_prom_gain_cac1 = subset(Kac_enrichedvWT, Kac_enrichedvWT$logFC_cac1 > 0.585)
-Kac_prom_gain_suz12 = subset(Kac_enrichedvWT, Kac_enrichedvWT$logFC_suz12 > 0.585)
-Kac_cac1_suz12_gain = subset(Kac_enrichedvWT, Kac_enrichedvWT$logFC_cac1_suz12 > 0.585)
-Kac_prom_gain_suz12_noCAF = subset(Kac_enrichedvWT, Kac_enrichedvWT$logFC_suz12 > 0.585 & ! Kac_enrichedvWT$gene_id %in% Kac_prom_gain_CAF$gene_id)
+#Kac_prom_gain_suz12 = subset(Kac_enrichedvWT, Kac_enrichedvWT$logFC_suz12 > 0.585)
+#Kac_cac1_suz12_gain = subset(Kac_enrichedvWT, Kac_enrichedvWT$logFC_cac1_suz12 > 0.585)
+#Kac_prom_gain_suz12_noCAF = subset(Kac_enrichedvWT, Kac_enrichedvWT$logFC_suz12 > 0.585 & ! Kac_enrichedvWT$gene_id %in% Kac_prom_gain_CAF$gene_id)
+#
+Kac_prom_gain_suz12_nocac1 = subset(Kac_enrichedvWT, Kac_enrichedvWT$logFC_suz12 > 0.585 & ! Kac_enrichedvWT$gene_id %in% Kac_prom_gain_cac1$gene_id)
+#
+Kac_enriched_nochange_dub = subset(Kac_enrichedvWT, ! Kac_enrichedvWT$gene_id %in% Kac_prom_gain_cac1$gene_id & ! Kac_enrichedvWT$gene_id %in% Kac_prom_gain_suz12_nocac1$gene_id)
+#
 Kac_uneriched = subset(Kac_Results_K27promTSSext_vWT, ! Kac_Results_K27promTSSext_vWT$gene_id %in% Kac_enriched$gene_id)
-Kac_cac1_suz12_gain_only = subset(Kac_enriched_nochange, Kac_enriched_nochange$logFC_cac1_suz12 > 0.585)
-Kac_enriched_nochange_dub = subset(Kac_enriched_nochange, ! Kac_enriched_nochange$gene_id %in% Kac_cac1_suz12_gain_only$gene_id )
+#
+Kac_cac1_suz12_gain_only = subset(Kac_enriched_nochange_dub, Kac_enriched_nochange_dub$logFC_cac1_suz12 > 0.585)
+#Remake no change
+Kac_enriched_nochange_dub = subset(Kac_enriched_nochange_dub, ! Kac_enriched_nochange_dub$gene_id %in% Kac_cac1_suz12_gain_only$gene_id)
+
 
 Kac_Gain_suz12 = subset(regions$K27genes, regions$K27genes$gene_id %in% Kac_prom_gain_suz12$gene_id)
 Kac_Gain_suz12_noCAF = subset(regions$K27genes, regions$K27genes$gene_id %in% Kac_prom_gain_suz12_noCAF$gene_id)
+#
+Kac_Gain_suz12_nocac1 = subset(regions$K27genes, regions$K27genes$gene_id %in% Kac_prom_gain_suz12_nocac1$gene_id)
+#
 Kac_Gain_cac1_suz12 = subset(regions$K27genes, regions$K27genes$gene_id %in% Kac_cac1_suz12_gain$gene_id)
 Kac_unerich = subset(regions$K27genes, regions$K27genes$gene_id %in% Kac_uneriched$gene_id)
 Kac_Gain_cac1 = subset(regions$K27genes, regions$K27genes$gene_id %in% Kac_prom_gain_cac1$gene_id)
@@ -3203,6 +3283,7 @@ write.table(Kac_Gain_cac1, file = "Kac_Gain_cac1.bed", sep = "\t", quote = FALSE
 write.table(Kac_Gain_suz12, file = "Kac_Gain_suz12.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 write.table(Kac_Gain_cac1_suz12, file = "Kac_Gain_cac1_suz12.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 write.table(Kac_Gain_suz12_noCAF, file = "Kac_Gain_suz12_noCAF.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
+write.table(Kac_Gain_suz12_nocac1, file = "Kac_Gain_suz12_no_cac1.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 write.table(Kac_unerich, file = "Kac_unenriched.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 write.table(Kac_Gain_cac1_suz12_only, file = "Kac_Gain_cac1-suz12_only.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 write.table(Kac_no_change_dub, file = "Kac_no_change_dub.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
@@ -3210,21 +3291,33 @@ write.table(Kac_no_change_dub, file = "Kac_no_change_dub.bed", sep = "\t", quote
 #K4
 K4_genes_gain_suz12 = subset(K4_enrichedvWT, K4_enrichedvWT$logFC_suz12 > 0.75)
 K4_cac1_suz12_gain = subset(K4_enrichedvWT, K4_enrichedvWT$logFC_cac1_suz12 > 0.75)
+#
 K4_genes_gain_suz12_noCAF = subset(K4_enrichedvWT, K4_enrichedvWT$logFC_suz12 > 0.75 & ! K4_enrichedvWT$gene_id %in% K4_genes_gain_CAF$gene_id)
+#
 K4_unenriched = subset(H3K4me2_Results_K27genes_vWT, ! H3K4me2_Results_K27genes_vWT$gene_id %in% K4_enrichedvWT$gene_id)
+#
 K4_genes_gain_cac1 = subset(K4_enrichedvWT, K4_enrichedvWT$logFC_cac1 > 0.75)
-K4_cac1_suz12_gain_only = subset(K4_nochange, K4_nochange$logFC_cac1_suz12 > 0.75)
+#
+K4_genes_gain_suz12_nocac1 = subset(K4_enrichedvWT, K4_enrichedvWT$logFC_suz12 > 0.75 & ! K4_enrichedvWT$gene_id %in% K4_genes_gain_cac1$gene_id)
+#
+K4_nochange_dub = subset(K4_enrichedvWT, ! K4_enrichedvWT$gene_id %in% K4_genes_gain_cac1$gene_id & ! K4_enrichedvWT$gene_id %in% K4_genes_gain_suz12$gene_id)
+#
+#K4_cac1_suz12_gain_only = subset(K4_nochange, K4_nochange$logFC_cac1_suz12 > 0.75)
 
 K4_Gain_cac1 = subset(regions$K27genes, regions$K27genes$gene_id %in% K4_genes_gain_cac1$gene_id)
 K4_Gain_suz12 = subset(regions$K27genes, regions$K27genes$gene_id %in% K4_genes_gain_suz12$gene_id)
 K4_Gain_cac1_suz12 = subset(regions$K27genes, regions$K27genes$gene_id %in% K4_cac1_suz12_gain$gene_id)
 K4_Gain_suz12_noCAF = subset(regions$K27genes, regions$K27genes$gene_id %in% K4_genes_gain_suz12_noCAF$gene_id)
+K4_Gain_suz12_nocac1 = subset(regions$K27genes, regions$K27genes$gene_id %in% K4_genes_gain_suz12_nocac1$gene_id)
+K4_no_change_dub = subset(regions$K27genes, regions$K27genes$gene_id %in% K4_nochange_dub$gene_id)
 K4_unenrich = subset(regions$K27genes, regions$K27genes$gene_id %in% K4_unenriched$gene_id)
 #K4_Gain_cac1_suz12_only = subset(regions$K27genes, regions$K27genes$gene_id %in% K4_cac1_suz12_gain_only$gene_id)
 
 write.table(K4_Gain_suz12, file = "K4_Gain_suz12.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 write.table(K4_Gain_cac1_suz12, file = "K4_Gain_cac1_suz12.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 write.table(K4_Gain_suz12_noCAF, file = "K4_Gain_suz12_noCAF.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
+write.table(K4_Gain_suz12_nocac1, file = "K4_Gain_suz12_no_cac1.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
+write.table(K4_no_change_dub, file = "K4_no_change_dub.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 write.table(K4_unenrich, file = "K4_unenriched.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 write.table(K4_Gain_cac1, file = "K4_Gain_cac1.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 #write.table(K4_Gain_cac1_suz12_only, file = "K4_Gain_cac1-suz12_only.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
